[gd_scene load_steps=5 format=3 uid="uid://bjllijvfq0y6t"]

[ext_resource type="Texture2D" uid="uid://b1x5botwr4f0r" path="res://bg.png" id="1_7o75k"]
[ext_resource type="Script" path="res://main.gd" id="1_56dt5"]
[ext_resource type="Theme" uid="uid://c6xec60sssp1n" path="res://Main.tres" id="2_71k4h"]
[ext_resource type="Script" path="res://window.gd" id="4_6jsjr"]

[node name="Root" type="Node2D"]
script = ExtResource("1_56dt5")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(599, 657)
scale = Vector2(6.98438, 5.21094)
texture = ExtResource("1_7o75k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -3.0
offset_top = -71.0
offset_right = 1168.0
offset_bottom = 601.0
script = ExtResource("4_6jsjr")

[node name="mult2" type="Button" parent="."]
offset_left = 1.0
offset_top = -64.0
offset_right = 49.0
offset_bottom = -34.0
scale = Vector2(2.20063, 2.20063)
theme = ExtResource("2_71k4h")
text = "quit"

[node name="input1" type="LineEdit" parent="."]
offset_right = 1155.0
offset_bottom = 105.0
theme = ExtResource("2_71k4h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
placeholder_text = "ENTER NUMBER 1"

[node name="input2" type="LineEdit" parent="."]
offset_top = 102.0
offset_right = 1156.0
offset_bottom = 207.0
theme = ExtResource("2_71k4h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
placeholder_text = "ENTER NUMBER 2"

[node name="mult" type="Button" parent="."]
offset_left = 18.0
offset_top = 224.0
offset_right = 40.0
offset_bottom = 255.0
scale = Vector2(6.27624, 6.27624)
theme = ExtResource("2_71k4h")
text = "X"

[node name="div" type="Button" parent="."]
offset_left = 340.0
offset_top = 224.0
offset_right = 362.0
offset_bottom = 255.0
scale = Vector2(6.27624, 6.27624)
theme = ExtResource("2_71k4h")
text = "/"

[node name="add" type="Button" parent="."]
offset_left = 692.0
offset_top = 224.0
offset_right = 714.0
offset_bottom = 255.0
scale = Vector2(6.27624, 6.27624)
theme = ExtResource("2_71k4h")
text = "+"

[node name="sub" type="Button" parent="."]
offset_left = 983.0
offset_top = 224.0
offset_right = 1005.0
offset_bottom = 255.0
scale = Vector2(6.27624, 6.27624)
theme = ExtResource("2_71k4h")
text = "-"

[node name="ans" type="Label" parent="."]
offset_left = 217.0
offset_top = 459.0
offset_right = 389.0
offset_bottom = 482.0
scale = Vector2(4.46317, 4.46317)
theme = ExtResource("2_71k4h")
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 259)

[connection signal="gui_input" from="Control" to="Control" method="_on_gui_input"]
[connection signal="button_up" from="mult2" to="." method="_on_mult_2_button_up"]
[connection signal="button_up" from="mult" to="." method="_on_mult_button_up"]
[connection signal="button_up" from="div" to="." method="_on_div_button_up"]
[connection signal="button_up" from="add" to="." method="_on_add_button_up"]
[connection signal="button_up" from="sub" to="." method="_on_sub_button_up"]
